SERVER-38588 block application of prepare oplog entry on secondaries when a concurrent background index build is running

This will prevent hybrid index builds from corrupting an index on secondary nodes if a prepared transaction becomes prepared during a build but commits after the index build commits.